# crater-ohos-bot

./: .gitignore  Cargo.toml  README.md  config.example.toml
docs/: ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  GITCODE_SETUP.md
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: handlers.rs  routes.rs
src/bot/: commands.rs  mod.rs  processor.rs
src/crater/: client.rs  mod.rs  types.rs
src/webhook/: callback.rs  mod.rs  receiver.rs
tests/: command_parser_tests.rs  integration_tests.rs
