[package]
name = "crater-ohos-bot"
version = "0.1.0"
edition = "2021"
authors = ["crater-ohos-bot contributors"]
description = "A bot for interacting with crater-ohos service on code hosting platforms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LuuuXXX/crater-ohos-bot"

[dependencies]
# HTTP Framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"

# Utilities
async-trait = "0.1"
subtle = "2.5"

[dev-dependencies]

[lib]
name = "crater_ohos_bot"
path = "src/lib.rs"

[[bin]]
name = "crater-ohos-bot"
path = "src/main.rs"
